# agendador-de-consulta-de-cnpj

./: .env-example  Dockerfile  README.md  fake_consumer.py  pyproject.toml
apps/: app.py
apps/core/: command.py  repositories.py
apps/extensions/: api.py  config.py  db.py  jwt.py
apps/jobs/: commands.py  infra.py  models.py  repositories.py  resources.py  schemas.py  use_case.py  utils.py
apps/results/: commands.py  models.py  repositories.py  resources.py  schemas.py  use_case.py
migrations/versions/: 57bb61e5085e_create_result_table.py  d8ad5dfa606b_create_job_table.py
